# development-of-intelligent-systems

./: README.md
maps/: map-jan.pgm
task1/: CMakeLists.txt  package.xml
task1/data/: encoding_data.json  odl_encoding_data.json
task1/helper/: face_encodings.py
task1/launch/: all.launch  autonomous.launch  combined.launch
task1/map/: unedited_map.pgm  unedited_map.yaml
task1/msg/: FaceLocation.msg
task1/params/: navigation.yaml
task1/rviz/: custom_rviz.rviz
task1/scripts/: face.py  listen_goals.py  movement.py  normal_map_service.py
task1/worlds/: rins2.world  rins3.world  rins4.world
task2/: CMakeLists.txt  package.xml
task2/launch/: circles.launch  combined.launch  robot.launch
task2/scripts/: arm_controller.py  cluster_database.py  cylinder_detection.py  face_test.py  movement.py
task2/src/: circle_detection.cpp
task2/worlds/: rins2.world  rins3.world  rins4.world  rins5.world
task3/: CMakeLists.txt  package.xml
task3/food_rec/FoodClassification/: test.py  train.py
task3/food_rec/Foodero_dataset/Foodero/: best_foodero_model.pt
task3/launch/: asr.launch  circles.launch  combined.launch  food.launch  robot.launch
task3/map/: edited_map.yaml
task3/meshes/: rins_task3_1.dae  rins_task3_2.dae
task3/scripts/: arm_controller.py  arm_teleop.py  cluster_database.py  cylinder_detection.py  detect_rings.py  extract_qr.py  extract_speech.py  face_test.py  fast_prototyping.py  food.py  movement.py  new_movement.py
task3/src/: circle_detection.cpp
task3/worlds/: rins1.world  rins2.world  rins3.world  rins4.world  rins5.world
